Fix scrollbar

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -1,7 +1,11 @@
+html, body {
+	margin: 0;
+	padding: 0;
+	height: 100%;
+}
+
 body {
 	font-family: 'Ubuntu', sans-serif;
-	margin: 0;
-	padding: 1vw;
 	background-color: #111;
 }
 
